@@ -2,7 +2,7 @@ Package: hydroGOF
 Type: Package
 Title: Goodness-of-fit functions for comparison of simulated and observed hydrological time series
 Version: 0.3-6-1
-Date: 2013-03-22
+Date: 2013-04-15
 Author: Mauricio Zambrano-Bigiarini [aut, cre]
 Authors@R: c(person("Mauricio", "Zambrano-Bigiarini", email = "mzb.devel@gmail.com", role=c("aut", "cre") ) )
 Maintainer: Mauricio Zambrano Bigiarini <mzb.devel@gmail.com>
