@@ -38,8 +38,8 @@ pbiasfdc.default <- function (sim, obs, lQ.thr=0.7, hQ.thr=0.2, na.rm=TRUE, plot
      sim <- as.numeric(sim[vi])
      		      
      # Computing the FDC for simulations and observations
-     obs.fdc <- hydroTSM::fdc(obs, plot=FALSE)
-     sim.fdc <- hydroTSM::fdc(sim, plot=FALSE)
+     obs.fdc <- fdc(obs, plot=FALSE) # hydroTSM::fdc
+     sim.fdc <- fdc(sim, plot=FALSE) # hydroTSM::fdc
      
      # Finding the flow value corresponding to the 'lQ.thr' pbb of excedence
      obs.lQ <- obs[Qposition(obs.fdc, lQ.thr)]
